--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,4 +1,5 @@
 $app-background: #f7f5f8;
+$dark-main: #4a3b54;
 
 header {
     // background-image: url("./images/lemonhero.jpg");
@@ -35,18 +36,19 @@ header {
   nav {
     margin: 0 auto;
     padding: 7px 0px;
-    background-color: $app-background;
+    background-color: $dark-main;
   }
   
   .nav-link {
     margin: 20px;
-    color: #4a3b54;
+    color: #fff;
     text-decoration: none;
+    font-weight: bold;
     // padding: 20px;
   }
   
   .nav-link:hover {
-    border-bottom: 2px solid #4a3b54;
+    border-bottom: 2px solid #fff;
     cursor: pointer;
   }
   
@@ -59,7 +61,7 @@ header {
   }
   
 
-  .Modal {
+  .modal {
     height: 500px;
     width: 400px;
     position: relative;
@@ -72,7 +74,7 @@ header {
     border-radius: 10px;
   }
 
-  .Modal input {
+  .modal input {
       width: 96%;
       height: 30px;
   }
