--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,5 +1,7 @@
+// @import '../base'; //Tried this and doesn't read it. 
 $app-background: #f7f5f8;
 $dark-main: #4a3b54;
+
 
 header {
     // background-image: url("./images/lemonhero.jpg");
