set up route to reviews product with id

--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,4 +1,4 @@
-// @import '../base'; //Tried this and doesn't read it. 
+// @use "base"; //Tried this and doesn't read it. 
 $app-background: #f7f5f8;
 $dark-main: #4a3b54;
 
