--- a/src/Components/SkincareProductList.scss
+++ b/src/Components/SkincareProductList.scss
@@ -11,6 +11,8 @@
   width: 300px;
   background-color: white;
   position: relative;
+  color: #4a3b54;
+  text-decoration: none;
 }
 
 .product-image {
@@ -25,4 +27,5 @@ h2 {
 h3 {
   font-size: 13px;
   font-weight: normal;
+
 }
