got skincare reviews data and fixed sass

--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,6 +1,4 @@
-// @use "base"; //Tried this and doesn't read it. 
-$app-background: #f7f5f8;
-$dark-main: #4a3b54;
+@import "./base"; 
 
 
 header {
