--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,19 @@ $app-background: #f7f5f8;
   margin: 0px;
   box-sizing: border-box;
   background-color: $app-background;
+  p {
+    padding-top: 25px;
+    color: rgb(112, 98, 98);
+    font-size: 13px;
+  }
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  p {
+    margin: 0;
+  }
 }
 
 button {
@@ -16,8 +29,7 @@ button {
   margin: 5px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 12px;
-
+  font-size: 13px;
 }
 
 button:hover {
@@ -25,7 +37,7 @@ button:hover {
   color: white;
 }
 
-footer{
-  background-color: #CFD4DD;
+footer {
+  background-color: #cfd4dd;
   height: 80px;
 }
