--- a/src/Components/SkincareProductsList.scss
+++ b/src/Components/SkincareProductsList.scss
@@ -1,7 +1,11 @@
+.skincare-product-list{
+  padding-top: 3%;
+}
+
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 0 3% 6%;
+  margin: 3% 0 3% 6%;
   min-width: 350px;
 }
 
@@ -16,6 +20,7 @@
 
   h2 {
     font-size: 15px;
+    padding: 20px 15px 5px 15px;
   }
 
   h3 {
@@ -28,3 +33,8 @@
   max-height: 225px;
   max-width: 200px;
 }
+
+// .recommended-chart {
+//   max-height: 1800px;
+//   max-width: 800px;
+// }
