--- a/src/Components/SkincareProductsList.scss
+++ b/src/Components/SkincareProductsList.scss
@@ -1,4 +1,4 @@
-.skincare-product-list{
+.skincare-product-list {
   padding-top: 3%;
 }
 
@@ -34,7 +34,7 @@
   max-width: 200px;
 }
 
-// .recommended-chart {
-//   max-height: 1800px;
-//   max-width: 800px;
-// }
+.recommended-chart {
+  width: 60vw;
+  margin: 0 0 2% 8%;
+}
