--- a/src/Components/_base.scss
+++ b/src/Components/_base.scss
@@ -1,2 +1,13 @@
 $app-background: #f7f5f8;
+$header-background: #fff;
+$section-background: #d4c4cf;
+$product-background: #fff;
+$header-text: #000;
+$light-header-text: #fff;
 $dark-main: #4a3b54;
+$footer-text: rgb(112, 98, 98);
+$footer-background: #cfd4dd;
+$button-hover: #a81e46;
+$sign-in-hover: #A89682;
+$nav-text: #fff;
+$horizontal-line: #9A9A9A;
