--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,12 @@
-$app-background: #f7f5f8;
+@import "./Components/base";
 
 .App {
   text-align: center;
-  padding: 0px;
-  margin: 0px;
   box-sizing: border-box;
   background-color: $app-background;
   p {
     padding-top: 25px;
-    color: rgb(112, 98, 98);
+    color: $footer-text;
     font-size: 13px;
   }
   body,
@@ -18,26 +16,27 @@ $app-background: #f7f5f8;
   h4,
   p {
     margin: 0;
+    padding: 0px;
   }
 }
 
 button {
-  background-color: #4a3b54;
+  background-color: $dark-main;
   border: none;
-  color: #f7f5f8;
-  padding: 10px 10px;
+  color: $app-background;
+  padding: 10px;
   margin: 5px;
   text-align: center;
   text-transform: uppercase;
   font-size: 13px;
+  border-radius: 5px;
 }
 
 button:hover {
-  background-color: #a81e46;
-  color: white;
-}
+  background-color: $button-hover;
+ }
 
 footer {
-  background-color: #cfd4dd;
+  background-color: $footer-background;
   height: 80px;
 }
