--- a/src/Components/_base.scss
+++ b/src/Components/_base.scss
@@ -8,6 +8,22 @@ $dark-main: #4a3b54;
 $footer-text: rgb(112, 98, 98);
 $footer-background: #cfd4dd;
 $button-hover: #a81e46;
-$sign-in-hover: #A89682;
+$sign-in-hover: #a89682;
 $nav-text: #fff;
-$horizontal-line: #9A9A9A;
+$horizontal-line: #9a9a9a;
+
+@mixin button-main {
+  background-color: $dark-main;
+  border: none;
+  color: $app-background;
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 13px;
+  border-radius: 5px;
+}
+
+@mixin button-hover {
+  background-color: $button-hover;
+}
