--- a/src/Components/_base.scss
+++ b/src/Components/_base.scss
@@ -7,7 +7,7 @@ $light-header-text: #fff;
 $dark-main: #4a3b54;
 $footer-text: rgb(112, 98, 98);
 $footer-background: #cfd4dd;
-$button-hover: #a81e46;
+$button-hover: #B53813;
 $sign-in-hover: #a89682;
 $nav-text: #fff;
 $horizontal-line: #9a9a9a;
@@ -21,7 +21,7 @@ $horizontal-line: #9a9a9a;
   text-align: center;
   text-transform: uppercase;
   font-size: 13px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 @mixin button-hover {
