working on media queries

--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -135,4 +135,12 @@
       }
     }
   }
+  @media (max-width: 1380px) {
+    .three-links {
+      img {
+        height: 250px;
+        width: 250px;
+      }
+    }
+  }
 }
