--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -97,3 +97,15 @@ hr {
     font-weight: bold;
   }
 }
+
+// to make the modal components fade in and out
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
