--- a/src/Components/SkincareProduct.scss
+++ b/src/Components/SkincareProduct.scss
@@ -62,6 +62,9 @@
         text-align: left;
         margin: 10px 25px;
       }
+      div {
+        width: 150px;
+      }
       .delete-visible {
         background-color: transparent;
         border: 2px solid $dark-main;
@@ -82,6 +85,17 @@
       }
       .delete-hidden {
         visibility: hidden;
+        background-color: transparent;
+        border: 2px solid $dark-main;
+        color: $dark-main;
+        height: 30px;
+        width: 70px;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 13px;
+        border-radius: 10px;
+        margin: 20px;
+        padding: 5px;
       }
       span {
         text-transform: uppercase;
